# HomeNetRewrite

./: .gitignore  .gitmodules  CMakeLists.txt  HomeNet.pro  README.md  configlist.txt  main.cpp
config/hnconfig/: hnconfig.cpp
config/parser/: parseblock.cpp  parseblock.h  parser.cpp
docs/: configlist.txt  driverguide.py  driverlistguide.conf
hnconfig/: CMakeLists.txt
hnconfig/include/: configQueryException.h  hnconfig.h
hnconfig/src/: getConfig.cpp  getFirstConfig.cpp  hnconfig.cpp  parse.cpp
hndrivers/: CMakeLists.txt
hndrivers/include/: hndriver.h  hndrivers.h  hnvalue.h
hndrivers/src/: hndrivers.cpp  init.cpp  loadDrivers.cpp  p_parseDriverlist.cpp
hndrivers/src/hndriver/: addValue.cpp  hndriver.cpp
hndrivers/src/hndrivers/: hndrivers.cpp  init.cpp  loadDrivers.cpp  p_importDrivers.cpp  p_parseDriverlist.cpp  sync.cpp
hndrivers/src/hnvalue/: hnvalue.cpp
hnhistory/: CMakeLists.txt
hnhistory/include/: hnhistory.h  hnhistorydaemon.h  valuehistory.h
hnhistory/include/hnhistorydaemon/: allJobs.h  args.h  exceptions.h  job.h  job_type.h
hnhistory/include/hnhistorydaemon/jobs/: appendHistory.h  cleanHistory.h  getHistory.h  stop.h  void.h
hnhistory/src/hnhistory/: append.cpp  getHistory.cpp  hnhistory.cpp  init.cpp  open.cpp  read.cpp
hnhistory/src/hnhistorydaemon/: getHistory.cpp  hnhistorydaemon.cpp  release.cpp  run.cpp  stop.cpp
hnhistory/src/hnhistorydaemon/args/: addArg.cpp  args.cpp
hnhistory/src/hnhistorydaemon/deploys/: d_appendHistory.cpp  d_cleanHistory.cpp  d_getHistory.cpp  d_stop.cpp  d_void.cpp  getHistory.cpp
hnhistory/src/hnhistorydaemon/hnhistorydaemon/: acquireFile.cpp  addRunningJob.cpp  cleanFinishedJobs.cpp  connectJob.cpp  init.cpp  lock_waiting.cpp  moveJobs.cpp  release.cpp  releaseFile.cpp  run.cpp  sl_jobJoined.cpp  stop.cpp
hnhistory/src/hnhistorydaemon/job/: finished.cpp  job.cpp
hnhistory/src/hnhistorydaemon/jobs/appendHistory/: appendHistory.cpp  run.cpp
hnhistory/src/hnhistorydaemon/jobs/cleanHistory/: cleanHistory.cpp  run.cpp
hnhistory/src/hnhistorydaemon/jobs/getHistory/: getHistory.cpp  run.cpp
hnhistory/src/hnhistorydaemon/jobs/stop/: run.cpp  stop.cpp
hnhistory/src/hnhistorydaemon/jobs/void/: run.cpp  void.cpp
hnnetworking/: CMakeLists.txt
hnnetworking/include/: hnnetworking.h
hnnetworking/src/hnnetworking/: hnnetworking.cpp  sl_onNewConnection.cpp  sl_onReadyRead.cpp  sl_onSocketStateChanged.cpp  start.cpp
hnnetworking/src/hnnetworking/messageProcessing/: processHelpRequest.cpp  processMessage.cpp  processSystemRequest.cpp  processValueRequest.cpp
hnparser/: CMakeLists.txt
hnparser/include/: hnparser.h  parseline.h
hnparser/src/hnparser/: append.cpp  clear.cpp  hnparser.cpp  parseStream.cpp  writeToStream.cpp
hnparser/src/parseline/: parseFromLine.cpp  parseline.cpp  toParseLine.cpp
hnpython/: CMakeLists.txt
hnpython/include/: hnpython.h  pyargs.h  pymodule.h
hnpython/src/hnpython/: appendPath.cpp  execModFunction.cpp  getModule.cpp  hnpython.cpp  loadModule.cpp  startPython.cpp  stopPython.cpp
hnpython/src/pyargs/: pyargs.cpp  setLongItem.cpp  setStringItem.cpp  setitem.cpp
hnpython/src/pymodule/: exec.cpp  import.cpp  pymodule.cpp  remove.cpp
homenet/: CMakeLists.txt  homenet.cpp  homenet.h  syncloop.cpp
homenet/hnconfig/: hnconfig.h
homenet/hndrivers/: fetchDrivers.cpp  hndrivers.cpp  hndrivers.h  importDrivers.cpp
homenet/hndrivers/hndriver/: hndriver.cpp  hndriver.h  syncvalues.cpp
homenet/hnhistory/: hnhistory.cpp  hnhistory.h  valuehistory.cpp
homenet/hnnetworking/: hnclient.h  hnnetworking.cpp  hnnetworking.h
homenet/hnnetworking/hnclient/: hnclient.cpp  hnclient_listenRead.cpp
homenet/hnnetworking/hnnetworking/: hnnetworking.cpp  hnnetworking_p_listen.cpp  hnnetworking_startListening.cpp
homenet/hnnetworking/private_slots/: hnnetworking_p_sl_newConnection.cpp  hnnetworking_p_sl_sock_readyRead.cpp  hnnetworking_p_sl_sock_stateChanged.cpp
homenet/hnpython/: hnpython.cpp  hnpython.h
homenet/hnpython/pymodule/: pymodule.cpp  pymodule.h
homenet/hnvalue/: hnvalue.cpp  hnvalue.h
homenet/include/: homenet.h  homenet_exception.h  homenet_status.h
homenet/src/: cleanupHistory.cpp  homenet.cpp  p_sigHandler.cpp  sl_start.cpp  sl_sync.cpp
homenet/src/homenet_exception/: homenet_exception.cpp
log/: log.cpp  log.h  logfunction.cpp  logfunction.h
main/src/: main.cpp
parser/: appendToFile.cpp  loadfile.cpp  parseblock.cpp  parseblock.h  parser.cpp  parser.h
tests/: CMakeLists.txt
tests/test_main/: CMakeLists.txt  main.cpp
tests/tests/Sanity/: CMakeLists.txt
tests/tests/Sanity/src/: sanity.cpp
tests/tests/hnhistory/: CMakeLists.txt
tests/tests/hnhistory/daemon/hnhistorydaemon/: CMakeLists.txt  t_hnhistorydaemon.h
tests/tests/hnhistory/daemon/hnhistorydaemon/src/: t_init.cpp  t_spam.cpp
tests/tests/hnhistory/daemon/job/: CMakeLists.txt  t_job.h
tests/tests/hnhistory/daemon/job/src/: t_constructor.cpp
tests/tests/hnpython/: CMakeLists.txt
tests/tests/hnpython/pymodule/: CMakeLists.txt  t_pymodule.h
tests/tests/hnpython/pymodule/src/: t_exec.cpp  t_import.cpp  t_remove.cpp
weathersens/: weathersens.cpp  weathersens.h  wssyncloop.cpp
weathersens/wsconfig/: wsconfig.cpp  wsconfig.h
weathersens/wsdriverlist/: wsdriverlist.cpp  wsdriverlist.h
weathersens/wsdriverlist/wsdriver/: wsdriver.cpp  wsdriver.h  wsvalue.cpp  wsvalue.h
